--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,7 +1,3 @@
-head { 
-    border-color: blueviolet;
-  }
-  body {
-    color: #ccc;
-    text-decoration-color: aqua;
-  }
+body {
+  background-color: #ccc;
+}
